2001-03-20  Arturo Espinosa  <arturo@ximian.com>

	Bug fixes for Debian port to work well.
	
	* network.pl.in (xst_network_interface_activate):
	  renamed to xst_network_interface_active.
	  (xst_network_deb22_get_file): found what this
	  function does. It should trivialy return $dev.
	  (xst_network_deb22_replace_bootproto): "none"
	  is mapped to "static", not the other way. Also,
	  the stanza value to replace is the 2nd, not 3rd.
	  (xst_network_debian_replace_remote_address): the
	  option name is "up", not "on".
	  (xst_network_get_interfaces_parse_table): features
	  not supported by distro are trivialy set to some
	  default value.
	* replace.pl.in (xst_replace_interfaces_get_next_option):
	  backtrack if last lines found were empty lines, so
	  added options get before those, instead of after. Just
	  for beauty.
	  (xst_replace_interface_stanza_value): create stanza
	  if not found. Added missing chomp.
	  (xst_replace_interfaces_option_str): Another missing
	  chomp.
	
2001-03-20  Kenneth Christiansen  <kenneth@gnu.org>

	reviewed by: Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in: Added some my's
	  implimented stack for managing tag containers
	* xml.pl.in(xst_xml_(print|format)_indent): 
	  Made format version
	* xml.pl.in(xst_xml_(print|format)_pcdata: 
	  New function for printing pcdata  
	* xml.pl.in(xst_xml_(print|format)_state_tag): 
	  Made format version, cleaned up a little
	* xml.pl.in(xst_xml_container_enter): New function     
	* xml.pl.in(xst_xml_container_leave): New function
	* xml.pl.in(xst_xml_print_container): New function

2001-03-20  Tambet Ingo  <tambet@ximian.com>

        * users-conf.in: Initial support for profiles.

2001-03-20  Michael Meeks  <michael@ximian.com>

	* xml.pl.in (xst_xml_print_line): print @_ not $_[0] -
	fixes bug in memory conf.

2001-03-19  Michael Meeks  <michael@ximian.com>

	* Makefile.am: Clean.

2001-03-19  Arturo Espinosa  <arturo@ximian.com>
