@@ -321,7 +321,10 @@ sub read_group
 
 sub read_profiles
 {
-  $profiles = &xst_buffer_load ("/var/cache/ximian-setup-tools/data/users/profiles.xml");
+  my $path;
+
+  $path = &xst_file_get_data_path . "/users/profiles.xml";
+  $profiles = &xst_buffer_load ($path);
 }
 
 sub write_group_passwd
@@ -516,7 +519,43 @@ sub change_group
 	}	
 }
 
+sub save_profiles
+{
+  if ($xml_doc_copy =~ /<profiles>(.*)<\/profiles>/ms)
+  {
+    my $path;
+
+    $path = &xst_file_get_data_path . "/users/profiles.xml"; 
+    &xst_buffer_save ($1, $path);
+  }
+}
+
+
 # --- XML parsing --- #
+
+sub xml_scan
+{
+  my $doc; my @tree; my $i;
+
+  if ($xst_input_file eq "") 
+  {
+    $doc .= $i while ($i = <STDIN>);
+  }
+  else
+  {
+    open INPUT_FILE, $xst_input_file;
+    $doc .= $i while ($i = <INPUT_FILE>);
+    close INPUT_FILE;
+  }
+
+  &xst_debug_print_string_to_file ("in.xml", $doc);
+  $xml_doc_copy = $doc;
+
+  @xst_xml_scan_list = ($doc =~ /([^\<]*)(\<[^\>]*\>)[ \t\n\r]*/mg); # pcdata, tag, pcdata, tag, ...
+  $tree = &xst_xml_scan_recurse;
+    
+  return $tree;
+}
 
 
 # Scan XML from standard input to an internal tree.
@@ -527,8 +566,12 @@ sub xml_parse
 	
   # Scan XML to tree.
 
-  $parse_tree = $tree = &xst_xml_scan;
+  $parse_tree = $tree = &xml_scan;
 
+  # Save profiles
+
+  &save_profiles ();
+  
   # Walk the tree recursively and extract configuration parameters.
   # This is the top level - find and enter the "users" tag.
 
@@ -722,6 +765,8 @@ sub xml_parse_group
 sub xml_print_profiles
 {
   my $i;
+
+  return if (@$profiles < 1);
   
   &xst_xml_print_line ("<profiles>\n");
   &xst_xml_enter ();
